--- a/css/style.css
+++ b/css/style.css
@@ -4,15 +4,14 @@ main{
 }
 
 .logo-back {
-    width: 2000px;
+    line-height: 150px;
     height: 150px;
-    background-image: url(/img/pattern.png);
-    background-size: cover;
-    margin-bottom: 30;
+    background-image: url(../img/pattern.png);
+    margin-bottom: 50px;
 }
 
 .logo {
-    width: 400px;
+    height:50%;
     text-align: center;
 
 }
@@ -43,15 +42,26 @@ main,h1 {
 }
 
 
+.table-align-center{
+    text-align: center;
+    margin-left: 5%;
+}
+
 .tab-head {
     background-color: rgb(119, 165, 246);
     color: white;
+
+}
+
+.col-item{
+    text-align: left;
 }
 
 .main-table {
-   width: 1500px;
+   width: 100%;
    height: 120px;
    margin-bottom: 30px;
+  
 
 }
 
